[gd_scene load_steps=4 format=3 uid="uid://cbqggu2s6lvs3"]

[ext_resource type="Script" uid="uid://8bqlhdis2g5y" path="res://Scripts/GameWorld.gd" id="1"]
[ext_resource type="Script" uid="uid://5uyne8f274el" path="res://Scripts/World.gd" id="2"]
[ext_resource type="TileSet" uid="uid://cbl2g1th7xqgl" path="res://Assets/Tileset.Tres/blockPack_tileset.tres" id="3"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1")

[node name="World" type="Node2D" parent="."]
script = ExtResource("2")

[node name="MapTileMap" type="TileMapLayer" parent="World"]
use_parent_material = true
tile_set = ExtResource("3")

[node name="MapContainer" type="Node2D" parent="World"]

[node name="TownMarkers" type="Node2D" parent="World/MapContainer"]

[node name="Camera2D" type="Camera2D" parent="."]
